--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <div id="unityContainer" style="width: 960px; height: 600px"></div>
-    <script>
-        UnityLoader.instantiate("unityContainer", "10MinutesTillDawnWebGL.json", {onProgress: function(unityInstance, progress) {
-            console.log("Loading: " + (progress * 100).toFixed(2) + "%");
-        }});
-    </script>
+<script>
+  var unityInstance = UnityLoader.instantiate("gameContainer", "10MinutesTillDawnWebGL.json", {onProgress: UnityProgress});
+</script>
 </body>
 </html>
+
